# geo-ai-agent

./: GEO diagram.drawio  README.md  pyproject.toml
src/ai_content_optimization_agent/: crew.py  main.py
src/ai_content_optimization_agent/config/: agents.yaml  tasks.yaml
src/ai_content_optimization_agent/llms/: gemini_google_search_llm.py
